[package]
name = "wakuwaku"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
kanau = { workspace = true, }
amqprs = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
uuid = { version = "1", optional = true }
redis = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
crossbeam-queue = "0.3"
tokio.workspace = true
tracing = { workspace = true, optional = true }
time.workspace = true

[features]
default = ["amqprs", "sqlx", "redis", "uuid", "tracing"]
tracing-otel = ["tracing"]